# inMotion

./: .gitignore  AI_RESULT.md  README.md  analyze_interference.py  analyze_seeds.py  augment_data.py  cleanData.py  dataset.csv  dataset_augmented.csv  dataset_only_noise.csv  dataset_only_pure.csv  evaluate_checkpoints.py  export.py  fileBtoAtoC_fail2.txt  hpo_exotic.py  job.sh  main.py  merge_csv.py  optuna_studies.db  perguntas.txt  predictions.py  pretrain_t_jepa.py  pyproject.toml  regenerate_dl_plots.py  regenerate_plots.py  run_classification.py  run_dl.py  run_exotic.py  run_optuna_optimization.py  teste.out.txt  teste.txt
.github/workflows/: astro.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
combined/seeds_results_combined/: all_seeds_combined.csv  combined_statistics.csv  seeds_analysis_report.txt
data/: AA.csv  AB.csv  BA.csv  BB.csv  LoopA.csv  LoopB.csv  fileBtoAtoC.txt  fileBtoAtoC_fail.txt  fileBtoAtoC_fail3.txt  noiseAA_BA.csv  noiseAA_BB.csv  noiseAA_BB2.csv  noiseAA_BB3.csv  noiseAB_AA.csv  noiseAB_AA2.csv  noiseAB_AA3.csv  noiseAB_BA.csv  noiseAB_BA2.csv  noiseAB_BA3.csv  noiseBA_AA.csv  noiseBA_AA2.csv  noiseBA_AA3.csv  noiseBA_BB.csv  noiseBA_BB2.csv  noiseBA_BB3.csv  noiseBB_AB.csv  noiseBB_AB2.csv  noiseBB_AB3.csv
demo/: .env.example  Dockerfile  README.md  compose.yaml  main.py  plan.md  pyproject.toml
demo/app/: __init__.py  config.py  contracts.py  event_hub.py  inference.py  scanner_adapter.py  session_store.py  wifi_scan.py
demo/static/: app.js  child.html  overview.html  style.css  teacher.html
demo/tests/: test_config.py  test_contracts.py  test_event_hub.py  test_inference.py  test_scanner_adapter.py  test_session_store.py
dl/: __init__.py  config.py  data_loader.py  eda.py  evaluation.py  interference.py  jepa_training.py  losses.py  optimization.py  results.py  sigreg.py  training.py  visualization.py
ml_classification/: __init__.py  classifiers.py  config.py  data_loader.py  eda.py  optimization.py  training.py  utils.py  visualization.py
models/: AdaBoost.joblib  Bagging.joblib  CatBoost.joblib  DecisionTree.joblib  DummyMostFrequent.joblib  DummyStratified.joblib  ExtraTree.joblib  GaussianNB.joblib  GradientBoosting.joblib  HistGradientBoosting.joblib  KNN_3.joblib  KNN_5.joblib  KNN_7.joblib  LDA.joblib  LightGBM.joblib  LinearSVC.joblib  LogisticRegression_ElasticNet.joblib  LogisticRegression_L1.joblib  LogisticRegression_L2.joblib  MLP_L2.joblib  MLP_Large.joblib  MLP_Medium.joblib  MLP_Small.joblib  NearestCentroid.joblib  NuSVC.joblib  PassiveAggressive.joblib  Perceptron.joblib  QDA.joblib  RandomForest.joblib  RidgeClassifier.joblib  SGDClassifier.joblib  SVC_Linear.joblib  SVC_Poly.joblib  SVC_RBF.joblib  StackingEnsemble.joblib  XGBoost.joblib
results/: classification_report.txt  classification_results.csv
results.old/: classification_results.csv  optuna_optimization_results.txt
results_3/: classification_report.txt  classification_results.csv  detailed_classifier_results.csv
results_3noise/: classification_results.csv
results_42/: classification_report.txt  classification_results.csv  detailed_classifier_results.csv
results_42noise/: classification_results.csv
results_42pure/: classification_results.csv  detailed_classifier_results.csv
results_5/: classification_results.csv  detailed_classifier_results.csv
results_5noise/: classification_results.csv
seeds_results_combined/: all_seeds_combined.csv  combined_statistics.csv  seeds_analysis_report.txt
seeds_results_combined_noise/: all_seeds_combined.csv  seeds_analysis_report.txt
seeds_results_combined_pure/: combined_statistics.csv
wavecom_files/: cleanRouteAtoB.txt  export.py  noiseG1AtoB_G2BtoA.txt  noiseG1AtoB_G2BtoA2.txt  noiseG1AtoB_G2loopA.txt  noiseG1AtoB_G2loopA2.txt  noiseG1BtoA_G2loopA.txt  noiseG1BtoA_G2loopA2.txt  noiseG1BtoA_G2loopB.txt  noiseG1BtoA_G2loopB2.txt  noiseG1loopA_G2loopB.txt  noiseG1loopA_G2loopB2.txt  noiseG1loopB_G2AtoB.txt  noiseG1loopB_G2AtoB2.txt  routeAtoB.txt  routeBtoA.txt  routeBtoA_3.txt  routeLoopA.txt  routeLoopB.txt  wifi_scan.py
website/: astro.config.mjs  package.json
(+97 files in other folders)
