[project]
name = "demo"
version = "0.1.0"
description = "inMotion Demo - Real-time position prediction from WiFi RSSI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "gunicorn>=25.1.0",
    "uvicorn[standard]>=0.41.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=2.0.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "watchfiles>=1.1.1",
    "pandas>=2.3.3",
]

[tool.setuptools]
py-modules = ["main", "train_model"]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.14.14", "ty>=0.0.14"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
ignore = ["COM812"]
select = [
    "C4",
    "COM",
    "D200",
    "D205",
    "D209",
    "D212",
    "E",
    "F",
    "I",
    "PLR0402",
    "PT",
    "SIM",
    "UP006",
    "UP007",
    "UP008",
    "UP015",
    "UP017",
    "UP018",
    "UP032",
    "UP034",
    "UP040",
    "W291",
]

[tool.pyright]
include = ["src"]
exclude = [""]
typeCheckingMode = "basic"
reportImportCycles = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreCoumment = true
verboseOutput = true
pythonVersion = "3.13"
pythonPlatform = "All"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
